@@ -715,3 +715,12 @@
 ===============================================================================
 18 Nov 93: Released TclX7.2a.
 ===============================================================================
+20 Nov 93:
+   o Improved tclhelp program:  can resize text windows,  added apropos
+     functionallity.
+-------------------------------------------------------------------------------
+22 Nov 93:
+   o Fixed problems with building with a seperate build directory.
+===============================================================================
+22 Nov 93: Released TclX7.3a and TclX7.2a to TclX7.3a patch.
+===============================================================================
